trunk/generated/LittleParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 src/Little.g 2011-12-02 00:41:29

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class LittleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DECL", "ASSIGN", "FUNC_HDR", "PROG_HDR", "FUNC_BODY", "WRITE", "READ", "DOWHILE", "IF", "CONDITION", "ELSE", "PARAMS", "FUNC_CALL", "RETURN", "IDENTIFIER", "STRINGLITERAL", "INTLITERAL", "FLOATLITERAL", "KEYWORD", "OPERATOR", "COMMENT", "WS", "'PROGRAM'", "'BEGIN'", "'END'", "'STRING'", "':='", "';'", "','", "'FLOAT'", "'INT'", "'VOID'", "'FUNCTION'", "'('", "')'", "'READ'", "'WRITE'", "'RETURN'", "'+'", "'-'", "'*'", "'/'", "'IF'", "'THEN'", "'ENDIF'", "'ELSE'", "'<'", "'>'", "'='", "'!='", "'DO'", "'WHILE'"
    };
    public static final int EOF=-1;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int DECL=4;
    public static final int ASSIGN=5;
    public static final int FUNC_HDR=6;
    public static final int PROG_HDR=7;
    public static final int FUNC_BODY=8;
    public static final int WRITE=9;
    public static final int READ=10;
    public static final int DOWHILE=11;
    public static final int IF=12;
    public static final int CONDITION=13;
    public static final int ELSE=14;
    public static final int PARAMS=15;
    public static final int FUNC_CALL=16;
    public static final int RETURN=17;
    public static final int IDENTIFIER=18;
    public static final int STRINGLITERAL=19;
    public static final int INTLITERAL=20;
    public static final int FLOATLITERAL=21;
    public static final int KEYWORD=22;
    public static final int OPERATOR=23;
    public static final int COMMENT=24;
    public static final int WS=25;

    // delegates
    // delegators


        public LittleParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LittleParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[66+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LittleParser.tokenNames; }
    public String getGrammarFileName() { return "src/Little.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // src/Little.g:37:1: program : 'PROGRAM' id 'BEGIN' pgm_body 'END' -> ^( PROG_HDR id pgm_body ) ;
    public final LittleParser.program_return program() throws RecognitionException {
        LittleParser.program_return retval = new LittleParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        CommonTree root_0 = null;

        Token string_literal1=null;
        Token string_literal3=null;
        Token string_literal5=null;
        LittleParser.id_return id2 = null;

        LittleParser.pgm_body_return pgm_body4 = null;


        CommonTree string_literal1_tree=null;
        CommonTree string_literal3_tree=null;
        CommonTree string_literal5_tree=null;
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        RewriteRuleSubtreeStream stream_pgm_body=new RewriteRuleSubtreeStream(adaptor,"rule pgm_body");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // src/Little.g:38:3: ( 'PROGRAM' id 'BEGIN' pgm_body 'END' -> ^( PROG_HDR id pgm_body ) )
            // src/Little.g:39:5: 'PROGRAM' id 'BEGIN' pgm_body 'END'
            {
            string_literal1=(Token)match(input,26,FOLLOW_26_in_program237); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_26.add(string_literal1);

            pushFollow(FOLLOW_id_in_program239);
            id2=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_id.add(id2.getTree());
            string_literal3=(Token)match(input,27,FOLLOW_27_in_program241); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_27.add(string_literal3);

            pushFollow(FOLLOW_pgm_body_in_program243);
            pgm_body4=pgm_body();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_pgm_body.add(pgm_body4.getTree());
            string_literal5=(Token)match(input,28,FOLLOW_28_in_program245); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_28.add(string_literal5);



            // AST REWRITE
            // elements: pgm_body, id
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 39:41: -> ^( PROG_HDR id pgm_body )
            {
                // src/Little.g:39:44: ^( PROG_HDR id pgm_body )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG_HDR, "PROG_HDR"), root_1);

                adaptor.addChild(root_1, stream_id.nextTree());
                adaptor.addChild(root_1, stream_pgm_body.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class id_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "id"
    // src/Little.g:42:1: id : IDENTIFIER ;
    public final LittleParser.id_return id() throws RecognitionException {
        LittleParser.id_return retval = new LittleParser.id_return();
        retval.start = input.LT(1);
        int id_StartIndex = input.index();
        CommonTree root_0 = null;

        Token IDENTIFIER6=null;

        CommonTree IDENTIFIER6_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // src/Little.g:43:3: ( IDENTIFIER )
            // src/Little.g:43:5: IDENTIFIER
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENTIFIER6=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_id268); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER6_tree = (CommonTree)adaptor.create(IDENTIFIER6);
            adaptor.addChild(root_0, IDENTIFIER6_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, id_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "id"

    public static class pgm_body_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pgm_body"
    // src/Little.g:47:1: pgm_body : decl func_declarations ;
    public final LittleParser.pgm_body_return pgm_body() throws RecognitionException {
        LittleParser.pgm_body_return retval = new LittleParser.pgm_body_return();
        retval.start = input.LT(1);
        int pgm_body_StartIndex = input.index();
        CommonTree root_0 = null;

        LittleParser.decl_return decl7 = null;

        LittleParser.func_declarations_return func_declarations8 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // src/Little.g:48:3: ( decl func_declarations )
            // src/Little.g:48:5: decl func_declarations
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_decl_in_pgm_body286);
            decl7=decl();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, decl7.getTree());
            pushFollow(FOLLOW_func_declarations_in_pgm_body288);
            func_declarations8=func_declarations();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, func_declarations8.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, pgm_body_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "pgm_body"

    public static class decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // src/Little.g:51:1: decl : ( ( var_decl_list )* | ( string_decl_list )* );
    public final LittleParser.decl_return decl() throws RecognitionException {
        LittleParser.decl_return retval = new LittleParser.decl_return();
        retval.start = input.LT(1);
        int decl_StartIndex = input.index();
        CommonTree root_0 = null;

        LittleParser.var_decl_list_return var_decl_list9 = null;

        LittleParser.string_decl_list_return string_decl_list10 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // src/Little.g:52:3: ( ( var_decl_list )* | ( string_decl_list )* )
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // src/Little.g:52:5: ( var_decl_list )*
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    // src/Little.g:52:5: ( var_decl_list )*
                    loop1:
                    do {
                        int alt1=2;
                        alt1 = dfa1.predict(input);
                        switch (alt1) {
                    	case 1 :
                    	    // src/Little.g:52:6: var_decl_list
                    	    {
                    	    pushFollow(FOLLOW_var_decl_list_in_decl304);
                    	    var_decl_list9=var_decl_list();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, var_decl_list9.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // src/Little.g:52:24: ( string_decl_list )*
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    // src/Little.g:52:24: ( string_decl_list )*
                    loop2:
                    do {
                        int alt2=2;
                        alt2 = dfa2.predict(input);
                        switch (alt2) {
                    	case 1 :
                    	    // src/Little.g:52:25: string_decl_list
                    	    {
                    	    pushFollow(FOLLOW_string_decl_list_in_decl311);
                    	    string_decl_list10=string_decl_list();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, string_decl_list10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class string_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl_list"
    // src/Little.g:56:1: string_decl_list : ( string_decl )+ ;
    public final LittleParser.string_decl_list_return string_decl_list() throws RecognitionException {
        LittleParser.string_decl_list_return retval = new LittleParser.string_decl_list_return();
        retval.start = input.LT(1);
        int string_decl_list_StartIndex = input.index();
        CommonTree root_0 = null;

        LittleParser.string_decl_return string_decl11 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // src/Little.g:57:3: ( ( string_decl )+ )
            // src/Little.g:57:5: ( string_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // src/Little.g:57:5: ( string_decl )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // src/Little.g:57:6: string_decl
            	    {
            	    pushFollow(FOLLOW_string_decl_in_string_decl_list331);
            	    string_decl11=string_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, string_decl11.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, string_decl_list_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "string_decl_list"

    public static class string_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl"
    // src/Little.g:59:1: string_decl : 'STRING' t= id ':=' STRINGLITERAL ';' -> ^( 'STRING' id STRINGLITERAL ) ;
    public final LittleParser.string_decl_return string_decl() throws RecognitionException {
        LittleParser.string_decl_return retval = new LittleParser.string_decl_return();
        retval.start = input.LT(1);
        int string_decl_StartIndex = input.index();
        CommonTree root_0 = null;

        Token string_literal12=null;
        Token string_literal13=null;
        Token STRINGLITERAL14=null;
        Token char_literal15=null;
        LittleParser.id_return t = null;


        CommonTree string_literal12_tree=null;
        CommonTree string_literal13_tree=null;
        CommonTree STRINGLITERAL14_tree=null;
        CommonTree char_literal15_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_STRINGLITERAL=new RewriteRuleTokenStream(adaptor,"token STRINGLITERAL");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // src/Little.g:60:3: ( 'STRING' t= id ':=' STRINGLITERAL ';' -> ^( 'STRING' id STRINGLITERAL ) )
            // src/Little.g:60:5: 'STRING' t= id ':=' STRINGLITERAL ';'
            {
            string_literal12=(Token)match(input,29,FOLLOW_29_in_string_decl345); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_29.add(string_literal12);

            pushFollow(FOLLOW_id_in_string_decl349);
            t=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_id.add(t.getTree());
            string_literal13=(Token)match(input,30,FOLLOW_30_in_string_decl351); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_30.add(string_literal13);

            STRINGLITERAL14=(Token)match(input,STRINGLITERAL,FOLLOW_STRINGLITERAL_in_string_decl353); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_STRINGLITERAL.add(STRINGLITERAL14);

            char_literal15=(Token)match(input,31,FOLLOW_31_in_string_decl355); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_31.add(char_literal15);



            // AST REWRITE
            // elements: id, 29, STRINGLITERAL
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 60:42: -> ^( 'STRING' id STRINGLITERAL )
            {
                // src/Little.g:60:45: ^( 'STRING' id STRINGLITERAL )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_29.nextNode(), root_1);

                adaptor.addChild(root_1, stream_id.nextTree());
                adaptor.addChild(root_1, stream_STRINGLITERAL.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, string_decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "string_decl"

    public static class var_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl_list"
    // src/Little.g:64:1: var_decl_list : ( var_decl )+ ;
    public final LittleParser.var_decl_list_return var_decl_list() throws RecognitionException {
        LittleParser.var_decl_list_return retval = new LittleParser.var_decl_list_return();
        retval.start = input.LT(1);
        int var_decl_list_StartIndex = input.index();
        CommonTree root_0 = null;

        LittleParser.var_decl_return var_decl16 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // src/Little.g:65:3: ( ( var_decl )+ )
            // src/Little.g:65:5: ( var_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // src/Little.g:65:5: ( var_decl )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                alt5 = dfa5.predict(input);
                switch (alt5) {
            	case 1 :
            	    // src/Little.g:65:6: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_var_decl_list383);
            	    var_decl16=var_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, var_decl16.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, var_decl_list_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "var_decl_list"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // src/Little.g:68:1: var_decl : var_type id ( ',' id )* ';' -> ( ^( DECL var_type id ) )+ ;
    public final LittleParser.var_decl_return var_decl() throws RecognitionException {
        LittleParser.var_decl_return retval = new LittleParser.var_decl_return();
        retval.start = input.LT(1);
        int var_decl_StartIndex = input.index();
        CommonTree root_0 = null;

        Token char_literal19=null;
        Token char_literal21=null;
        LittleParser.var_type_return var_type17 = null;

        LittleParser.id_return id18 = null;

        LittleParser.id_return id20 = null;


        CommonTree char_literal19_tree=null;
        CommonTree char_literal21_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        RewriteRuleSubtreeStream stream_var_type=new RewriteRuleSubtreeStream(adaptor,"rule var_type");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // src/Little.g:69:3: ( var_type id ( ',' id )* ';' -> ( ^( DECL var_type id ) )+ )
            // src/Little.g:70:5: var_type id ( ',' id )* ';'
            {
            pushFollow(FOLLOW_var_type_in_var_decl405);
            var_type17=var_type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_var_type.add(var_type17.getTree());
            pushFollow(FOLLOW_id_in_var_decl407);
            id18=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_id.add(id18.getTree());
            // src/Little.g:70:17: ( ',' id )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==32) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // src/Little.g:70:18: ',' id
            	    {
            	    char_literal19=(Token)match(input,32,FOLLOW_32_in_var_decl410); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_32.add(char_literal19);

            	    pushFollow(FOLLOW_id_in_var_decl412);
            	    id20=id();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_id.add(id20.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            char_literal21=(Token)match(input,31,FOLLOW_31_in_var_decl416); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_31.add(char_literal21);



            // AST REWRITE
            // elements: id, var_type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 70:31: -> ( ^( DECL var_type id ) )+
            {
                if ( !(stream_id.hasNext()||stream_var_type.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_id.hasNext()||stream_var_type.hasNext() ) {
                    // src/Little.g:70:34: ^( DECL var_type id )
                    {
                    CommonTree root_1 = (CommonTree)adaptor.nil();
                    root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECL, "DECL"), root_1);

                    adaptor.addChild(root_1, stream_var_type.nextTree());
                    adaptor.addChild(root_1, stream_id.nextTree());

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_id.reset();
                stream_var_type.reset();

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 8, var_decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class var_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_type"
    // src/Little.g:74:1: var_type : ( 'FLOAT' | 'INT' );
    public final LittleParser.var_type_return var_type() throws RecognitionException {
        LittleParser.var_type_return retval = new LittleParser.var_type_return();
        retval.start = input.LT(1);
        int var_type_StartIndex = input.index();
        CommonTree root_0 = null;

        Token set22=null;

        CommonTree set22_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return retval; }
            // src/Little.g:75:3: ( 'FLOAT' | 'INT' )
            // src/Little.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set22=(Token)input.LT(1);
            if ( (input.LA(1)>=33 && input.LA(1)<=34) ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set22));
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


